# karch

./: README.md
android_test_cmdline/: Android.mk  main.c
dl/tensorflow/: 1_file_op.py  2_add_multi.py  4_full_connection.py  5_mnist_full_connection.py  6_mnist_cnn.py
idea/: agenda.md
idea/DL/: study.md
idea/Others/: MarkDown.md
idea/algorithm/: study_note.txt
idea/ePlat/: ePlat OS.md
idea/math_algorithm/: study_note.txt
idea/随笔/: 20170324开篇.md
linux_apps/inter_process_communication/: readme.txt
linux_apps/process_and_schedul/: syslog_dameon.c
mcu/: RTOS.md  arm_pic_var_51.txt  ePlat.dia  ePlat.h  ePlat.txt  rtos.txt  test.lua
sunup_apps/Demo/: Android.mk
sunup_apps/UsbSerialExamples/: Android.mk
sunup_apps/myDemo_listview/: Android.mk
sunup_apps/myDemo_service/: AndroidManifest.xml
sunup_apps/myDemo_tab_button2/: Android.mk  AndroidManifest.xml
sunup_apps/myDemo_tab_button3/: AndroidManifest.xml
sunup_apps/myDemo_table/: AndroidManifest.xml
sunup_apps/myDemo_textedit_service/: Android.mk  AndroidManifest.xml
sunup_apps/myDemo_textedit_service_driver_without_cts/: AndroidManifest.xml
sunup_apps/password/: Android.mk
sunup_apps/sunup_current_0622_pum_console/: AndroidManifest.xml
sunup_apps/sunup_current_broadcast/: Android.mk
sunup_apps/sunup_current_half/: Android.mk
sunup_apps/sunup_v1_main_console_ui/: AndroidManifest.xml
sunup_apps/sunup_v1_main_console_ui_com_listview/: Android.mk
tools_skills/c++/: study_note.txt
tools_skills/opencl/hello_c/: CMakeLists.txt  hello.c  hello.cl
work/: readme
(+598 files in other folders)
